--- a/extensions/gconv/Makefile
+++ b/extensions/gconv/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building the gconv package for MuntsOS
 
-# Copyright (C)2019-2021, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2019-2022, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -44,7 +44,7 @@ $(PKGDIR):
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVERSION)/g		$(PKGDIR)/DEBIAN/control
 	mkdir -p					$(PKGDIR)/usr/lib
-	cp -R -P -p $(GCCSYSROOT)/usr/lib/gconv		$(PKGDIR)/usr/lib
+	cp -R -P -p $(LIBSLIBDIR)/gconv			$(PKGDIR)/usr/lib
 	touch $@
 
 package.deb: $(PKGFILE)
