Renamed extension net-snmp to snmpd
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20314 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/snmpd/Makefile
+++ b/extensions/snmpd/Makefile
@@ -41,7 +41,7 @@ SBINDIR		= $(DESTDIR)/usr/local/sbin
 MIBSDIR		= $(DESTDIR)/usr/local/share/snmp/mibs
 
 OSNAME		= muntsos-$(BOARDBASE)
-PKGNAME		= $(SRCNAME)
+PKGNAME		= snmpd
 PKGVERSION	= $(SRCVER)-$(shell date +%Y.%j)
 PKGARCH		= $(DEBARCH)
 PKGDIR		= $(PKGNAME)-$(OSNAME)
