--- a/toolchain/crosstool/RaspberryPi3.config
+++ b/toolchain/crosstool/RaspberryPi3.config
@@ -692,7 +692,7 @@ CT_GDB_CROSS_STATIC=y
 CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 # CT_GDB_NATIVE is not set
 CT_GDB_GDBSERVER=y
-CT_GDB_NATIVE_BUILD_IPA_LIB=y
+# CT_GDB_NATIVE_BUILD_IPA_LIB is not set
 # CT_GDB_NATIVE_STATIC is not set
 CT_GDB_NATIVE_STATIC_LIBSTDCXX=y
 CT_GDB_GDBSERVER_TOPLEVEL=y
