Still more reorganizing
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20328 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -80,10 +80,12 @@ ifneq ($(wildcard $(INSTALLDIR)/$(CONFIGURE_NAME)/lib64),)
 endif
 	rsync -avc $(INSTALLDIR)/$(CONFIGURE_NAME)/debug-root/usr/ $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr
 	rsync -avc $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/etc/       $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr/etc
-	rsync -avc $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/sbin/      $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr/sbin
+	rsync -avc $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/sbin/      $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr/bin
+	rsync -avc $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr/sbin/  $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr/bin
 	rm -rf $(INSTALLDIR)/$(CONFIGURE_NAME)/debug-root
 	rm -rf $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/etc
 	rm -rf $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/sbin
+	rm -rf $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/usr/sbin
 	rm -rf $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/var
 	ln -s ../../../lib/gcc/$(CONFIGURE_NAME)/$(GCCVER)/adalib/libgnat.so  $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/lib/libgnat.so
 	ln -s ../../../lib/gcc/$(CONFIGURE_NAME)/$(GCCVER)/adalib/libgnarl.so $(INSTALLDIR)/$(CONFIGURE_NAME)/libc/lib/libgnarl.so
@@ -112,7 +114,7 @@ package.deb: build.done
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVER)/g		$(PKGDIR)/DEBIAN/control
-	sed -i s/@@BOARDNAME@@/$(BOARDBASE)/g		$(PKGDIR)/DEBIAN/control
+	sed -i s/@@BOARDNAME@@/$(BOARDBASELC)/g		$(PKGDIR)/DEBIAN/control
 	mkdir -p					$(PKGDIR)/usr/local
 	cp -R -P -p gcc-$(CONFIGURE_NAME)		$(PKGDIR)$(TOOLCHAIN_DIR)
 	rm						$(PKGDIR)$(TOOLCHAIN_DIR)/build.log.bz2
