Removed -crosstool from the package name.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20335 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/control
+++ b/toolchain/libs/control
@@ -5,3 +5,5 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: GCC cross-toolchain libraries for @@BOARDNAME@@
+Conflicts: @@NAME@@-crosstool
+Replaces: @@NAME@@-crosstool
