--- a/toolchain/libaws/control
+++ b/toolchain/libaws/control
@@ -5,3 +5,5 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: GCC cross-toolchain Ada Web Server library for @@BOARDNAME@@
+Conflicts: @@NAME@@-crosstool
+Replaces: @@NAME@@-crosstool
