Updated for latest Crosstool-NG toolchaines
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20342 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -552,8 +552,7 @@ endif
 
 # Install ldconfig
 
-	install -cm 0755 $(GCCSYSROOT)/sbin/ldconfig		$@/sbin
-	if [ -f $(GCCSYSROOT)/sbin/ldconfig.real ]; then install -cm 0755 $(GCCSYSROOT)/sbin/ldconfig.real $@/sbin ; fi
+	install -cm 0755 $(LIBSBINDIR)/ldconfig			$@/sbin
 
 # Install ldd
 
