--- a/bootkernel/kernel/RaspberryPi1.config
+++ b/bootkernel/kernel/RaspberryPi1.config
@@ -2,9 +2,9 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 5.10.92 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0) 8.3.0"
+CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0.506_5a4c95d) 10.3.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80300
+CONFIG_GCC_VERSION=100300
 CONFIG_LD_VERSION=232000000
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
