Disable building ltrace
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20343 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/RaspberryPi3.config
+++ b/toolchain/crosstool/RaspberryPi3.config
@@ -696,27 +696,7 @@ CT_GDB_GDBSERVER=y
 # CT_GDB_NATIVE_STATIC is not set
 CT_GDB_NATIVE_STATIC_LIBSTDCXX=y
 CT_GDB_GDBSERVER_TOPLEVEL=y
-CT_DEBUG_LTRACE=y
-CT_DEBUG_LTRACE_PKG_KSYM="LTRACE"
-CT_LTRACE_DIR_NAME="ltrace"
-CT_LTRACE_PKG_NAME="ltrace"
-CT_LTRACE_SRC_RELEASE=y
-# CT_LTRACE_SRC_DEVEL is not set
-# CT_LTRACE_SRC_CUSTOM is not set
-CT_LTRACE_PATCH_GLOBAL=y
-# CT_LTRACE_PATCH_BUNDLED is not set
-# CT_LTRACE_PATCH_LOCAL is not set
-# CT_LTRACE_PATCH_BUNDLED_LOCAL is not set
-# CT_LTRACE_PATCH_LOCAL_BUNDLED is not set
-# CT_LTRACE_PATCH_NONE is not set
-CT_LTRACE_PATCH_ORDER="global"
-CT_LTRACE_V_0_7_3=y
-CT_LTRACE_VERSION="0.7.3"
-CT_LTRACE_MIRRORS="http://ftp.debian.org/debian/pool/main/l/ltrace ftp://ftp.debian.org/debian/pool/main/l/ltrace"
-CT_LTRACE_ARCHIVE_FILENAME="@{pkg_name}_@{version}.orig"
-CT_LTRACE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_LTRACE_ARCHIVE_FORMATS=".tar.bz2"
-CT_LTRACE_SIGNATURE_FORMAT=""
+# CT_DEBUG_LTRACE is not set
 CT_DEBUG_STRACE=y
 CT_DEBUG_STRACE_PKG_KSYM="STRACE"
 CT_STRACE_DIR_NAME="strace"
@@ -1037,7 +1017,6 @@ CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
-CT_LIBELF_TARGET=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
 # CT_ZLIB_NEEDED is not set
