Upgraded the Raspberry Pi kernel to 5.10.95.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20345 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.10.92 Kernel Configuration
+# Linux/arm64 5.10.95 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0) 8.3.0"
+CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0.506_5a4c95d) 10.3.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80300
+CONFIG_GCC_VERSION=100300
 CONFIG_LD_VERSION=232000000
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
@@ -385,7 +385,7 @@ CONFIG_ARM64_CNP=y
 #
 # ARMv8.3 architectural features
 #
-CONFIG_ARM64_PTR_AUTH=y
+CONFIG_CC_HAS_BRANCH_PROT_PAC_RET=y
 CONFIG_CC_HAS_SIGN_RETURN_ADDRESS=y
 CONFIG_AS_HAS_PAC=y
 # end of ARMv8.3 architectural features
@@ -402,6 +402,7 @@ CONFIG_ARM64_TLB_RANGE=y
 # ARMv8.5 architectural features
 #
 CONFIG_ARM64_BTI=y
+CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI=y
 CONFIG_ARM64_E0PD=y
 CONFIG_ARCH_RANDOM=y
 # end of ARMv8.5 architectural features
@@ -411,6 +412,8 @@ CONFIG_ARM64_MODULE_PLTS=y
 # CONFIG_ARM64_PSEUDO_NMI is not set
 CONFIG_RELOCATABLE=y
 # CONFIG_RANDOMIZE_BASE is not set
+CONFIG_CC_HAVE_STACKPROTECTOR_SYSREG=y
+CONFIG_STACKPROTECTOR_PER_TASK=y
 # end of Kernel Features
 
 #
