Upgraded gcc to 10.3.0
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20346 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/BeagleBone.config
+++ b/bootkernel/kernel/BeagleBone.config
@@ -4,10 +4,10 @@
 #
 
 #
-# Compiler: arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0) 8.3.0
+# Compiler: arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0.506_5a4c95d) 10.3.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80300
+CONFIG_GCC_VERSION=100300
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
