--- a/toolchain/crosstool/RaspberryPi2.config
+++ b/toolchain/crosstool/RaspberryPi2.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.24.0.506_5a4c95d Configuration
+# crosstool-NG 1.25.0_rc1.2_6cd1663 Configuration
 #
 CT_CONFIGURE_has_static_link=y
 CT_CONFIGURE_has_cxx11=y
@@ -27,11 +27,11 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.24.0.506_5a4c95d"
+CT_VERSION="1.25.0_rc1.2_6cd1663"
 CT_VCHECK=""
-CT_CONFIG_VERSION_ENV="3"
-CT_CONFIG_VERSION_CURRENT="3"
-CT_CONFIG_VERSION="3"
+CT_CONFIG_VERSION_ENV="4"
+CT_CONFIG_VERSION_CURRENT="4"
+CT_CONFIG_VERSION="4"
 CT_MODULES=y
 
 #
@@ -287,6 +287,7 @@ CT_LINUX_PATCH_GLOBAL=y
 # CT_LINUX_PATCH_LOCAL_BUNDLED is not set
 # CT_LINUX_PATCH_NONE is not set
 CT_LINUX_PATCH_ORDER="global"
+# CT_LINUX_V_5_16 is not set
 # CT_LINUX_V_5_15 is not set
 # CT_LINUX_V_5_14 is not set
 # CT_LINUX_V_5_13 is not set
@@ -327,6 +328,8 @@ CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_LINUX_SIGNATURE_FORMAT="unpacked/.sign"
+CT_LINUX_5_12_or_older=y
+CT_LINUX_older_than_5_12=y
 CT_LINUX_5_3_or_older=y
 CT_LINUX_older_than_5_3=y
 CT_LINUX_later_than_4_8=y
@@ -379,19 +382,20 @@ CT_BINUTILS_PATCH_GLOBAL=y
 # CT_BINUTILS_PATCH_LOCAL_BUNDLED is not set
 # CT_BINUTILS_PATCH_NONE is not set
 CT_BINUTILS_PATCH_ORDER="global"
+CT_BINUTILS_V_2_38=y
 # CT_BINUTILS_V_2_37 is not set
 # CT_BINUTILS_V_2_36 is not set
 # CT_BINUTILS_V_2_35 is not set
 # CT_BINUTILS_V_2_34 is not set
 # CT_BINUTILS_V_2_33 is not set
-CT_BINUTILS_V_2_32=y
+# CT_BINUTILS_V_2_32 is not set
 # CT_BINUTILS_V_2_31 is not set
 # CT_BINUTILS_V_2_30 is not set
 # CT_BINUTILS_V_2_29 is not set
 # CT_BINUTILS_V_2_28 is not set
 # CT_BINUTILS_V_2_27 is not set
 # CT_BINUTILS_V_2_26 is not set
-CT_BINUTILS_VERSION="2.32"
+CT_BINUTILS_VERSION="2.38"
 CT_BINUTILS_MIRRORS="$(CT_Mirrors GNU binutils) $(CT_Mirrors sourceware binutils/releases)"
 CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -422,10 +426,9 @@ CT_ALL_BINUTILS_CHOICES="BINUTILS"
 #
 # C-library
 #
-# CT_LIBC_BIONIC is not set
 CT_LIBC_GLIBC=y
 # CT_LIBC_MUSL is not set
-# CT_LIBC_UCLIBC is not set
+# CT_LIBC_UCLIBC_NG is not set
 CT_LIBC="glibc"
 CT_LIBC_CHOICE_KSYM="GLIBC"
 CT_THREADS="nptl"
@@ -450,12 +453,13 @@ CT_GLIBC_PATCH_GLOBAL=y
 # CT_GLIBC_PATCH_LOCAL_BUNDLED is not set
 # CT_GLIBC_PATCH_NONE is not set
 CT_GLIBC_PATCH_ORDER="global"
+CT_GLIBC_V_2_35=y
 # CT_GLIBC_V_2_34 is not set
 # CT_GLIBC_V_2_33 is not set
 # CT_GLIBC_V_2_32 is not set
 # CT_GLIBC_V_2_31 is not set
 # CT_GLIBC_V_2_30 is not set
-CT_GLIBC_V_2_29=y
+# CT_GLIBC_V_2_29 is not set
 # CT_GLIBC_V_2_28 is not set
 # CT_GLIBC_V_2_27 is not set
 # CT_GLIBC_V_2_26 is not set
@@ -464,19 +468,18 @@ CT_GLIBC_V_2_29=y
 # CT_GLIBC_V_2_23 is not set
 # CT_GLIBC_V_2_19 is not set
 # CT_GLIBC_V_2_17 is not set
-# CT_GLIBC_V_2_12_1 is not set
-CT_GLIBC_VERSION="2.29"
+CT_GLIBC_VERSION="2.35"
 CT_GLIBC_MIRRORS="$(CT_Mirrors GNU glibc)"
 CT_GLIBC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_GLIBC_SIGNATURE_FORMAT="packed/.sig"
-CT_GLIBC_2_32_or_older=y
-CT_GLIBC_older_than_2_32=y
-CT_GLIBC_2_30_or_older=y
-CT_GLIBC_older_than_2_30=y
+CT_GLIBC_later_than_2_32=y
+CT_GLIBC_2_32_or_later=y
+CT_GLIBC_later_than_2_30=y
+CT_GLIBC_2_30_or_later=y
+CT_GLIBC_later_than_2_29=y
 CT_GLIBC_2_29_or_later=y
-CT_GLIBC_2_29_or_older=y
 CT_GLIBC_later_than_2_28=y
 CT_GLIBC_2_28_or_later=y
 CT_GLIBC_later_than_2_27=y
@@ -499,16 +502,13 @@ CT_GLIBC_DEP_KERNEL_HEADERS_VERSION=y
 CT_GLIBC_DEP_BINUTILS=y
 CT_GLIBC_DEP_GCC=y
 CT_GLIBC_DEP_PYTHON=y
-CT_GLIBC_SPARC_ALLOW_V7=y
 CT_GLIBC_BUILD_SSP=y
 CT_GLIBC_HAS_LIBIDN_ADDON=y
 # CT_GLIBC_USE_LIBIDN_ADDON is not set
 CT_GLIBC_NO_SPARC_V8=y
-CT_GLIBC_HAS_OBSOLETE_RPC=y
 CT_GLIBC_EXTRA_CONFIG_ARRAY=""
 CT_GLIBC_CONFIGPARMS=""
 CT_GLIBC_EXTRA_CFLAGS=""
-# CT_GLIBC_ENABLE_OBSOLETE_RPC is not set
 # CT_GLIBC_ENABLE_FORTIFIED_BUILD is not set
 # CT_GLIBC_DISABLE_VERSIONING is not set
 CT_GLIBC_OLDEST_ABI=""
@@ -525,7 +525,7 @@ CT_GLIBC_SSP_DEFAULT=y
 # CT_GLIBC_SSP_STRONG is not set
 # CT_GLIBC_ENABLE_WERROR is not set
 CT_GLIBC_ENABLE_COMMON_FLAG=y
-CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC"
+CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC_NG"
 CT_LIBC_SUPPORT_THREADS_ANY=y
 CT_LIBC_SUPPORT_THREADS_NATIVE=y
 
@@ -540,7 +540,7 @@ CT_LIBC_XLDD=y
 #
 # C compiler
 #
-CT_CC_CORE_PASS_1_NEEDED=y
+CT_CC_CORE_NEEDED=y
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
 CT_CC_SUPPORT_ADA=y
@@ -559,7 +559,6 @@ CT_CC_GCC_PKG_KSYM="GCC"
 CT_GCC_DIR_NAME="gcc"
 CT_GCC_USE_GNU=y
 # CT_GCC_USE_LINARO is not set
-# CT_GCC_USE_ORACLE is not set
 CT_GCC_USE="GCC"
 CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
@@ -578,7 +577,6 @@ CT_GCC_V_10=y
 # CT_GCC_V_8 is not set
 # CT_GCC_V_7 is not set
 # CT_GCC_V_6 is not set
-# CT_GCC_V_5 is not set
 CT_GCC_VERSION="10.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -597,14 +595,13 @@ CT_GCC_later_than_7=y
 CT_GCC_7_or_later=y
 CT_GCC_later_than_6=y
 CT_GCC_6_or_later=y
+CT_GCC_REQUIRE_6_or_later=y
 CT_GCC_later_than_5=y
 CT_GCC_5_or_later=y
 CT_GCC_REQUIRE_5_or_later=y
 CT_GCC_later_than_4_9=y
 CT_GCC_4_9_or_later=y
 CT_GCC_REQUIRE_4_9_or_later=y
-CT_GCC_later_than_4_8=y
-CT_GCC_4_8_or_later=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
@@ -679,20 +676,20 @@ CT_GDB_PATCH_GLOBAL=y
 # CT_GDB_PATCH_LOCAL_BUNDLED is not set
 # CT_GDB_PATCH_NONE is not set
 CT_GDB_PATCH_ORDER="global"
-CT_GDB_V_11_1=y
-# CT_GDB_V_10_2 is not set
-# CT_GDB_V_9_2 is not set
+CT_GDB_V_11=y
+# CT_GDB_V_10 is not set
+# CT_GDB_V_9 is not set
 # CT_GDB_V_8_3 is not set
-CT_GDB_VERSION="11.1"
+CT_GDB_VERSION="11.2"
 CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
 CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
-CT_GDB_11_1_or_later=y
-CT_GDB_11_1_or_older=y
-CT_GDB_later_than_10_2=y
-CT_GDB_10_2_or_later=y
+CT_GDB_later_than_11=y
+CT_GDB_11_or_later=y
+CT_GDB_later_than_10=y
+CT_GDB_10_or_later=y
 CT_GDB_later_than_8_3=y
 CT_GDB_8_3_or_later=y
 CT_GDB_later_than_8_0=y
@@ -726,32 +723,8 @@ CT_STRACE_PATCH_GLOBAL=y
 # CT_STRACE_PATCH_LOCAL_BUNDLED is not set
 # CT_STRACE_PATCH_NONE is not set
 CT_STRACE_PATCH_ORDER="global"
-CT_STRACE_V_5_14=y
-# CT_STRACE_V_5_11 is not set
-# CT_STRACE_V_5_10 is not set
-# CT_STRACE_V_5_9 is not set
-# CT_STRACE_V_5_8 is not set
-# CT_STRACE_V_5_7 is not set
-# CT_STRACE_V_5_6 is not set
-# CT_STRACE_V_5_5 is not set
-# CT_STRACE_V_5_4 is not set
-# CT_STRACE_V_5_3 is not set
-# CT_STRACE_V_5_2 is not set
-# CT_STRACE_V_5_1 is not set
-# CT_STRACE_V_5_0 is not set
-# CT_STRACE_V_4_26 is not set
-# CT_STRACE_V_4_25 is not set
-# CT_STRACE_V_4_24 is not set
-# CT_STRACE_V_4_23 is not set
-# CT_STRACE_V_4_22 is not set
-# CT_STRACE_V_4_21 is not set
-# CT_STRACE_V_4_20 is not set
-# CT_STRACE_V_4_19 is not set
-# CT_STRACE_V_4_18 is not set
-# CT_STRACE_V_4_17 is not set
-# CT_STRACE_V_4_16 is not set
-# CT_STRACE_V_4_15 is not set
-CT_STRACE_VERSION="5.14"
+CT_STRACE_V_5_16=y
+CT_STRACE_VERSION="5.16"
 CT_STRACE_MIRRORS="https://strace.io/files/${CT_STRACE_VERSION} https://github.com/strace/strace/releases/download/v${CT_STRACE_VERSION}"
 CT_STRACE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_STRACE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -809,6 +782,8 @@ CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.gz"
 CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
+CT_GETTEXT_0_21_or_older=y
+CT_GETTEXT_older_than_0_21=y
 CT_COMP_LIBS_GMP=y
 CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
 CT_GMP_DIR_NAME="gmp"
@@ -831,11 +806,6 @@ CT_GMP_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2"
 CT_GMP_SIGNATURE_FORMAT="packed/.sig"
-CT_GMP_later_than_5_1_0=y
-CT_GMP_5_1_0_or_later=y
-CT_GMP_later_than_5_0_0=y
-CT_GMP_5_0_0_or_later=y
-CT_GMP_REQUIRE_5_0_0_or_later=y
 CT_COMP_LIBS_ISL=y
 CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
@@ -851,6 +821,7 @@ CT_ISL_PATCH_GLOBAL=y
 # CT_ISL_PATCH_NONE is not set
 CT_ISL_PATCH_ORDER="global"
 # CT_ISL_V_0_24 is not set
+# CT_ISL_V_0_23 is not set
 # CT_ISL_V_0_22 is not set
 # CT_ISL_V_0_21 is not set
 # CT_ISL_V_0_20 is not set
@@ -869,15 +840,6 @@ CT_ISL_0_18_or_later=y
 CT_ISL_0_18_or_older=y
 CT_ISL_later_than_0_15=y
 CT_ISL_0_15_or_later=y
-CT_ISL_REQUIRE_0_15_or_later=y
-CT_ISL_later_than_0_14=y
-CT_ISL_0_14_or_later=y
-CT_ISL_REQUIRE_0_14_or_later=y
-CT_ISL_later_than_0_13=y
-CT_ISL_0_13_or_later=y
-CT_ISL_later_than_0_12=y
-CT_ISL_0_12_or_later=y
-CT_ISL_REQUIRE_0_12_or_later=y
 CT_COMP_LIBS_LIBELF=y
 CT_COMP_LIBS_LIBELF_PKG_KSYM="LIBELF"
 CT_LIBELF_DIR_NAME="libelf"
@@ -971,9 +933,6 @@ CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
 CT_MPFR_later_than_4_0_0=y
 CT_MPFR_4_0_0_or_later=y
-CT_MPFR_later_than_3_0_0=y
-CT_MPFR_3_0_0_or_later=y
-CT_MPFR_REQUIRE_3_0_0_or_later=y
 CT_COMP_LIBS_NCURSES=y
 CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
