--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -2304,7 +2304,7 @@ CONFIG_VIDEO_S5C73M3=m
 #
 # Media SPI Adapters
 #
-CONFIG_CXD2880_SPI_DRV=m
+# CONFIG_CXD2880_SPI_DRV is not set
 # end of Media SPI Adapters
 
 CONFIG_MEDIA_TUNER=y
