Build V4L stuff as modules, as much as possible.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20379 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -2047,8 +2047,8 @@ CONFIG_VIDEO_V4L2_I2C=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_V4L2_FWNODE=y
-CONFIG_V4L2_ASYNC=y
+CONFIG_V4L2_FWNODE=m
+CONFIG_V4L2_ASYNC=m
 # end of Video4Linux options
 
 #
@@ -2073,16 +2073,16 @@ CONFIG_DVB_MAX_ADAPTERS=16
 #
 # CONFIG_MEDIA_USB_SUPPORT is not set
 # CONFIG_RADIO_ADAPTERS is not set
-CONFIG_VIDEOBUF2_CORE=y
-CONFIG_VIDEOBUF2_V4L2=y
-CONFIG_VIDEOBUF2_MEMOPS=y
-CONFIG_VIDEOBUF2_DMA_CONTIG=y
+CONFIG_VIDEOBUF2_CORE=m
+CONFIG_VIDEOBUF2_V4L2=m
+CONFIG_VIDEOBUF2_MEMOPS=m
+CONFIG_VIDEOBUF2_DMA_CONTIG=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_VIDEO_CADENCE is not set
 # CONFIG_VIDEO_ASPEED is not set
 # CONFIG_VIDEO_MUX is not set
 # CONFIG_VIDEO_XILINX is not set
-CONFIG_VIDEO_BCM2835_UNICAM=y
+CONFIG_VIDEO_BCM2835_UNICAM=m
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_DVB_PLATFORM_DRIVERS is not set
 # CONFIG_SDR_PLATFORM_DRIVERS is not set
