Build V4L stuff as modules, as much as possible.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20380 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -2034,7 +2034,7 @@ CONFIG_MEDIA_TEST_SUPPORT=y
 #
 # Media core support
 #
-CONFIG_VIDEO_DEV=y
+CONFIG_VIDEO_DEV=m
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_DVB_CORE=y
 # end of Media core support
@@ -2042,7 +2042,7 @@ CONFIG_DVB_CORE=y
 #
 # Video4Linux options
 #
-CONFIG_VIDEO_V4L2=y
+CONFIG_VIDEO_V4L2=m
 CONFIG_VIDEO_V4L2_I2C=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
@@ -2060,7 +2060,6 @@ CONFIG_V4L2_ASYNC=m
 #
 # Digital TV options
 #
-# CONFIG_DVB_MMAP is not set
 # CONFIG_DVB_NET is not set
 CONFIG_DVB_MAX_ADAPTERS=16
 # CONFIG_DVB_DYNAMIC_MINORS is not set
