Enabled CONFIG_WIZNET_W5300
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20382 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -1284,7 +1284,7 @@ CONFIG_ENCX24J600=y
 # CONFIG_NET_VENDOR_VIA is not set
 CONFIG_NET_VENDOR_WIZNET=y
 CONFIG_WIZNET_W5100=y
-# CONFIG_WIZNET_W5300 is not set
+CONFIG_WIZNET_W5300=y
 # CONFIG_WIZNET_BUS_DIRECT is not set
 # CONFIG_WIZNET_BUS_INDIRECT is not set
 CONFIG_WIZNET_BUS_ANY=y
