Disabled CONFIG_NET_VENDOR_AMD
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20388 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -1255,8 +1255,7 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_ALACRITECH is not set
 # CONFIG_ALTERA_TSE is not set
 # CONFIG_NET_VENDOR_AMAZON is not set
-CONFIG_NET_VENDOR_AMD=y
-# CONFIG_AMD_XGBE is not set
+# CONFIG_NET_VENDOR_AMD is not set
 # CONFIG_NET_VENDOR_AQUANTIA is not set
 # CONFIG_NET_VENDOR_ARC is not set
 # CONFIG_NET_VENDOR_BROADCOM is not set
